--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - PIPELINE_DB=redis://redis:6379/1
     volumes:
       - shared_volume:/tmp
     depends_on:
@@ -30,6 +31,7 @@ services:
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - PIPELINE_DB=redis://redis:6379/1
     volumes:
       - shared_volume:/tmp
     depends_on:
